[gd_scene load_steps=6 format=2]

[ext_resource path="res://ArtAssets/lady-tyrant.png" type="Texture" id=1]
[ext_resource path="res://HBoxContainer.gd" type="Script" id=2]
[ext_resource path="res://PartyCharacter.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/ltromatic.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = SubResource( 1 )

[node name="Sprite" type="Sprite"]
position = Vector2( 116.673, 113.844 )
scale = Vector2( 0.266412, 0.264645 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="CombatMenu" type="HBoxContainer" parent="."]
margin_left = 406.8
margin_top = -132.204
margin_right = 845.8
margin_bottom = 182.796
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionMenu" type="VBoxContainer" parent="CombatMenu"]
margin_right = 139.0
margin_bottom = 315.0

[node name="Label" type="Label" parent="CombatMenu/ActionMenu"]
margin_right = 139.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "Actions
"

[node name="ListContainer" type="Control" parent="CombatMenu"]
margin_left = 143.0
margin_right = 143.0
margin_bottom = 315.0

[connection signal="action_selected" from="CombatMenu" to="." method="_on_CombatMenu_action_selected"]
